# kaiku

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPENDENCY_AUDIT.md  DEPRECATIONS_AND_UPDATES.md  DEVELOPMENT.md  LICENSE-APACHE  LICENSE-MIT  LICENSE_COMPLIANCE.md  Makefile  README.md  ROADMAP.md  audit.md  deny.toml  docker-compose.dev.yml  docker-compose.yml  index.html  privacy.html  setup-dev.sh  style.css
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  performance_issue.yml  security_vulnerability.yml  tauri-serverevent-parity.md
.github/workflows/: ci.yml  release.yml  security.yml  tauri-build.yml
.serena/: project.yml
.serena/memories/: forgot-password-feature-completed.md  forgot-password-v2-ready.md  home-unread-aggregator-v2-ready.md  spoilers-mentions-v2-ready.md
client/: AGENTS.md  index.html  package-lock.json  package.json  uno.config.ts  vite.config.ts
client/e2e/: AGENTS.md
client/public/: AGENTS.md
design/: asset_prompts.md
docs/: rate-limiting.md
infra/: AGENTS.md
kaiku-landing/: index.html  main.js  style.css
scripts/: README.md  check_docs_governance.py  create-test-users.sh  dev-setup.sh  init-rustfs.sh  resume-session.sh  update-deps.sh
server/: AGENTS.md  Cargo.toml  SECURITY.md  setup-db.sh
shared/vc-common/: Cargo.toml
shared/vc-common/src/: lib.rs
shared/vc-common/src/protocol/: mod.rs
shared/vc-common/src/types/: channel.rs  message.rs  user.rs
shared/vc-crypto/: Cargo.toml
shared/vc-crypto/src/: lib.rs  megolm.rs  olm.rs  recovery.rs
(+482 files in other folders)
